--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<link rel="stylesheet" href="lib/loading.css" />
 		<!--link rel="stylesheet" href="styles.min.css"-->
 		<link rel="stylesheet" href="styles.css"-->
-		<title>CEMs Virtual Tour</title>
+		<title>360 Walkthrough - Advanced Navigation Research Simulator (ANRS)</title>
 	</head>
 	<body>
 		<!--5 seconds loading screen-->
@@ -68,15 +68,17 @@
 			<div id="leftHalf"></div>
 			<div id="rightHalf">
 				<div id="content">
-					<h2 id="title">(Insert Title)360 Central Air Conditioning Virtual Tour</h2>
+					<h2 id="title">360 Walkthrough - Advanced Navigation Research Simulator (ANRS)</h2>
 					<p id="description">
-						(Insert Description here)
-						Welcome to 360 Central Air Conditioning Virtual Tour! 
-						In this application, you will be able to learn about the Central Air Conditioning System. 
-						There are 3 locations that you need to visit to complete the tour. 
-						You can use the white dots to bring you through the entire tour.
-						Along the way you will be able to see “Plus icon” that allow you to gain an
-						insight of the different equipment. Have Fun!!
+						ANRS is the only dedicated navigation research simulator, which is made up of Full Mission Ship-handling Simulator (FMSS) and Vessel Traffic Information System (VTIS), in South East Asia.
+						It allows CEMS to work closely with Singapore Maritime Academy to enhance the training assessment and delivery for traditional seafarers for manned vessels.
+						<br><br>
+						The ANRS enables CEMS and our partners to research into human factors and build AI assessment systems which could be deployed at other training institutions.
+						<br><br>
+ 						Leveraging on ANRS, CEMS is in close partnership with PSA Marine to embrace technologies to enhance training and assessment for our Harbour Pilots.
+						Both parties shared a common vision - The collaboration on AI assessment of navigation and ship handling competency for our pilots 
+						is a great move to study the human elements that is critical to maritime safety.
+
 					</p>
 					<button
 						id="btnEnter"
