--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 				</div>
 			</div>
 			<!--Aframe canvas-->
-			<a-scene>
+			<a-scene>TIS
+
 				<!--Images Collection-->
 				<a-assets timeout="99999">
 					
@@ -739,7 +740,7 @@
 							dialog-popup="
 						title: Chilled Water Pump;
 						body:- The chilled water pipes are insulation to prevent condensation and to prevent heat gain.\n\n- Vapour barriers are used to protect the insulation and prevent vapour from entering the insulation.;	  
-						image: hotspots/VTIS Station.PNG;"
+						image: hotspots/VTIS Station.png;"
 						></a-entity>
 						
 					<!-- </a-entity>
